adding onCancel prop

--- a/demo/popup/index.html
+++ b/demo/popup/index.html
@@ -33,6 +33,11 @@
             	})
             },
 
+            onCancel: function (data, actions) {
+              console.log(data)
+              console.log(actions)
+            },
+
             // When the iframe window calls `window.xprops.onLogin(email)` this callback will be called
 
             onCheckout: function(email) {
