--- a/demo/popup/index.html
+++ b/demo/popup/index.html
@@ -16,18 +16,19 @@
 
         safepay.Button.render({
 
-            env: 'local',
+            env: 'dev',
 
-            amount: 6800.57,
+            amount: 10.00,
 
             client: {
-            	"local": "sec_4f84abd2-0bae-4476-be6b-22c8c9e35133"
+            	"local": "sec_4f84abd2-0bae-4476-be6b-22c8c9e35133",
+                "dev": "sec_b5ac169b-607e-4110-a9d5-4f22d68ebad3"
             },
 
             payment: function (data, actions) {
             	return actions.payment.create({
             		transaction: {
-            			amount: 6800.57,
+            			amount: 10.00,
             			currency: 'PKR'
             		}
             	})
