add props for customer and billing

--- a/demo/popup/index.html
+++ b/demo/popup/index.html
@@ -46,8 +46,19 @@
             currency: 'USD',
 
             client: {
-            	"local": "sec_e4ab858b-77da-42df-b498-a301b3e9ed72",
+            	"local": "sec_c18b707b-bd0f-41fe-947a-e894adf81e20",
                 "development": "sec_b5ac169b-607e-4110-a9d5-4f22d68ebad3"
+            },
+
+
+            billing: {
+                "name": "Default Address",
+                "address_1": "1279 38th ave",
+                "address_2": "",
+                "city": "San Francisco",
+                "province": "CA",
+                "postal": "75500",
+                "country": "US"
             },
 
             validate: function(actions) {
